<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/llDataRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/fragment_tab2_margin">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fragment_tab2_margin"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <EditText
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_tab2_txtName"
                android:inputType="textPersonName"
                tools:ignore="Autofill">

                <requestFocus/>
            </EditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fragment_tab2_margin"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <EditText
                android:id="@+id/txtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_tab2_txtPhone"
                android:inputType="phone"
                tools:ignore="Autofill"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fragment_tab2_margin"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_tab2_txtAdress"
                android:inputType="textPostalAddress"
                tools:ignore="Autofill"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>